# river-level-forecasting

./: .cache.sqlite  .dockerignore  .gitignore  500_12143400.csv  Dockerfile  LICENSE.md  README.md  aws_dispatcher.py  build_historical.py  build_output_chart.py  concept-proof.ipynb  darts-env.txt  demo-BlockRNN.ipynb  demo-NBeats.ipynb  demo-darts.ipynb  demo.ipynb  demo_coordinate_generation.py  demo_inference.py  demo_load_training_forecaster.py  ensemble_concept_proof.ipynb  environment.yml  environment_gpu.yml  evaluate_cached.py  evaluate_regressor.bat  evaluate_regressor.py  experimentation_land.ipynb  file_wrangler.py  flow_summary copy.csv  flow_summary.csv  fsite_data.py  grid_search.py  gridsearched_params.txt  interactive_training.py  load_training_forecaster.py  main.py  multiprocessing_train.py  out.csv  out_2.csv  pyproject.toml  rebuild_catchment.py  (+16 more)
darts_custom/: ensemble_model_custom.py  regression_ensemble_model_custom.py
data/: catchment_meta_data.py  catchments_NOAA_eval.json  catchments_long.json  catchments_short.json  catchments_short_0_2.json  catchments_short_0_3.json  catchments_test.json  columns copy.txt  columns.txt  columns_ecmwf.txt  grid_search_0_model.json  grid_search_0_windows.json  grid_search_1_lag_windows.json  grid_search_1_model.json  grid_search_2_training.json  grid_search_space.json  grid_search_space_model.json  grid_search_space_test.json  inference_eval_example.csv  weather_locations.py  weather_locs.csv
demos/: demo_api_weather_provider.py  demo_api_weather_provider_ecmwf.py  demo_aws_weather_provider.py  (+9 more)
src/: main.py  (+5 more)
(+229 files in other folders)
