[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "river_level_forecasting"
version = "0.0.0"
authors = [
  { name="Zach Bochanski", email="bochansz@oregonstate.edu" },
  { name="Doug Dennis", email="dennisdo@oregonstate.edu" },
  { name="Orion Junkins", email="junkinso@oregonstate.edu" },
  { name="Melissa Swearingen", email="swearime@oregonstate.edu" },
]
description = "River level forecasting package."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/orion-junkins/river-level-forecasting"
"Bug Tracker" = "https://github.com/orion-junkins/river-level-forecasting/issues"

[tool.pytest.ini_options]
markers = [
  "slow: mark test as slow to run",
  "aws: mark test that needs aws credentials to run"
]
minversion = "7.0"
testpaths = [
    "tests"
]